--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,11 @@ button {
   font-size: 14px;
 }
 
-.container {
+.root-container.container {
   margin: 30px auto;
-  max-width: 450px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   align-items: center;
 }
 
